allow upload multiple images. Add splitt releascalender in 1 and 2
