# SneakerApi/documentation/openApi3.0.yaml
@@ -92,7 +92,7 @@ paths:
                 example:
                   errorDescription: Something went wrong. Please try it again
       tags: [ ]
-  /releaseCalendar:
+  /releaseCalendar/1:
     get:
       summary: get release calendar
       security:
@@ -147,6 +147,98 @@ paths:
                         priceSpan: $420 - $561
                         releaseDate: 11/16/2019
                         imgArray: [ https://nssdata.s3.amazonaws.com/images/galleries/21523/17(1).jpg, https://static.highsnobiety.com/thumbor/Qwdd3FFzOQLmxOOYvVufUUOj49Q=/fit-in/1200x720/smart/static.highsnobiety.com/wp-content/uploads/2019/10/12102045/travis-scott-nike-air-force-1-texas-release-date-price-feat.jpg]
+                        brand: Nike
+                        description: description
+                        position: bottom
+        401:
+          description: Authorization failed
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errorDescription:
+                    type: string
+                example:
+                  errorDescription: you need a authorization header
+        404:
+          description: Please add correct username
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errorDescription:
+                    type: string
+                example:
+                  errorDescription: No user with this username found
+        500:
+          description: Unnkown server error please check your Body&Header
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errorDescription:
+                    type: string
+                example:
+                  errorDescription: Something went wrong. Please try it again
+      tags: [ ]
+  /releaseCalendar/2:
+    get:
+      summary: get release calendar
+      security:
+        - bearerAuth: [ ]
+      responses:
+        200:
+          description: Successfull checked header
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  accessToken:
+                    type: string
+                  data:
+                    tpye: object
+                    properties:
+                      releaseCalendar:
+                        type: array
+                        items:
+                          releaseCalendaritem:
+                            type: object
+                            properties:
+                              title:
+                                type: string
+                              imageURL:
+                                tpye: string
+                              retailPrice:
+                                type: string
+                              priceSpan:
+                                tpye: string
+                              releaseDate:
+                                tpye: string
+                              imgArray:
+                                type: array
+                                items:
+                                  link:
+                                    type: string
+                              brand:
+                                type: string
+                              description:
+                                type: string
+                              position:
+                                tpye: string
+                example:
+                  accessToken: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9
+                  data:
+                    blog:
+                      - title: Air Force 1 Low Travis Scott Cactus Jack
+                        imageURL: https://images.restocks.eu/products/CN2405-900/nike-air-force-1-low-travis-scott-cactus-jack-1-1000.png
+                        retailPrice: $160
+                        priceSpan: $420 - $561
+                        releaseDate: 11/16/2019
+                        imgArray: [ https://nssdata.s3.amazonaws.com/images/galleries/21523/17(1).jpg, https://static.highsnobiety.com/thumbor/Qwdd3FFzOQLmxOOYvVufUUOj49Q=/fit-in/1200x720/smart/static.highsnobiety.com/wp-content/uploads/2019/10/12102045/travis-scott-nike-air-force-1-texas-release-date-price-feat.jpg ]
                         brand: Nike
                         description: description
                         position: bottom
